--- a/style.css
+++ b/style.css
@@ -40,8 +40,11 @@ body {
 
 .globCol3 {
 	width: 60%;
-	height: 100%;
+	height: 610px;
 	float: left;
+	background-color: aliceblue;
+	align-self: center;
+	table-layout: auto;
 }
 
 .layout div div{
@@ -57,4 +60,25 @@ body {
 	height: 100%;
 	width: 100%;
 	background: #ffffff;
+}
+
+.fill {
+	background-image: url('http://source.unsplash.com/random/150x150');
+	position: absolute;
+	height: 150px;
+	width: 150px;
+	top: 5px;
+	left: 5px;
+	cursor: pointer;
+}
+
+.empty {
+	display: inline-block;
+	position: relative;
+	height: 160px;
+	width: 160px;
+	margin: 10px;
+	top: 5px;
+	border: 3px salmon solid;
+	background-color: wheat;
 }
