--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
 	width: 60%;
 	height: 610px;
 	float: left;
-	background-color: aliceblue;
+	background-color: white;
 	align-self: center;
 	table-layout: auto;
 }
@@ -75,26 +75,4 @@ body {
 	height: 100%;
 	width: 100%;
 	background: #ffffff;
-}
-
-.fill {
-	background-image: url('http://source.unsplash.com/random/150x150');
-	position: absolute;
-	object-fit: cover;
-	height: 150px;
-	width: 150px;
-	top: 5px;
-	left: 5px;
-	cursor: pointer;
-}
-
-.empty {
-	display: inline-block;
-	position: sticky;
-	height: 160px;
-	width: 160px;
-	margin: 10px;
-	top: 5px;
-	border: 3px salmon solid;
-	background-color: wheat;
 }
