made possible using drag&drop between 2 divs

--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ body {
 	overflow: hidden;
 }
 
+#drawing {
+	height: 580px;
+	width: auto;
+	overflow: hidden;
+}
+
 #picturesCol {
 	height: 580px;
 	width: 15%;
