--- a/style.css
+++ b/style.css
@@ -1,62 +1,62 @@
 body {
- font: 12pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
- background: darkslategray; /* Цвет фона */
- color: whitesmoke;
+    font: 12pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
+    background: darkslategray; /* Цвет фона */
+    color: whitesmoke;
 }
 
 #header {
-    background-color: blue;
+    background-color: pink;
     color: white;
     text-align: center;
     padding: 6px;
+    border-radius: 5px;
 }
 
 #navigation {
     line-height: 40px;
-    background-color: yellowgreen;
-    height: 580px;
+    background-color: plum;
+    height: 590px;
     width: 15%;
-	float: left;
-	padding: 5px;
-	overflow: hidden;
+    float: left;
+    padding: 0px;
+    overflow: auto;
+    border-radius: 5px;
 }
 
 #drawing {
-	height: 590px;
-	width: auto;
-	overflow: hidden;
+    height: 590px;
+    width: auto;
+    overflow: hidden;
+    background-color: plum;
+    border-radius: 5px;
 }
 
 #picturesCol {
-	height: 580px;
-	width: 15%;
-	padding: 5px;
-	float: right;
-	background-color: white;
-	overflow: hidden;
-}
-
-#canvasCol {
-	height: 580px;
-	width: 83%;
-	float: left;
-	padding: 5px;
-	background-color: aliceblue;
+    height: 100%;
+    width: 19%;
+    padding: 0px;
+    float: right;
+    background-color: palevioletred;
+    overflow: auto;
+    float: right;
+    z-index: 1;
+    border-radius: 5px;
 }
 
 #footer {
-    background-color: blue;
+    background-color: pink;
     color: white;
     text-align: center;
     padding: 6px;
     clear: both;
+    border-radius: 5px;
 }
 
 .saveButton {
-	padding: 5px 5px;
-	text-align: center;
-	align-self: center;
-	background-color: azure;
+    padding: 5px 5px;
+    text-align: center;
+    align-self: center;
+    background-color: azure;
     width: 40%;
     height: 20%;
     box-shadow: 0 0 0 rgba(0,0,0,0.1), inset 0 0 0 rgba(0,0,0,0.1);
@@ -68,24 +68,83 @@ body {
 }
 
 .optionList li{
-	list-style-type: none
+    list-style-type: none
 }
 
 .layout {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 .layout div div{
-    margin: 0 10px; /* Отступы */
-    padding: 10px; /* Поля */
+    margin: 0 0px; /* Отступы */
+    padding: 0px; /* Поля */
     height: 100%; /* Высота колонок */
-    background: darksalmon; /* Цвет фона */ 
+    background: darksalmon; /* Цвет фона */
     color: #f5e8d0; /* Цвет текста */
-	overflow: auto;
+    overflow: auto;
 }
 
-.drawing {
-	height: 100%;
-	width: 100%;
-	background: #ffffff;
+
+#outer-dropzone {
+    height: 100%;
+    width: 80%;
+    background-color: white;
+    float: left;
+    z-index: 2;
+    border-radius: 5px;
+}
+
+#inner-dropzone {
+    height: 80px;
+}
+
+.dropzone {
+    background-color: white;
+    border: dashed 4px transparent;
+    border-radius: 5px;
+    margin: 0px auto 0px;
+    padding: 0px;
+    width: 80%;
+    transition: background-color 0.3s;
+    z-index: 2;
+}
+
+.drop-active {
+    border-color: #aaa;
+    position: relative;
+}
+
+.drop-target {
+    background-color: #29e;
+    border-color: #fff;
+    border-style: solid;
+}
+
+.drag-drop {
+    display: inline-block;
+    z-index: 1;
+    touch-action: none;
+    -webkit-transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
+    transition: background-color 0.3s;
+}
+
+.drag-drop.can-drop {
+    color: #000;
+    background-color: transparent;
+}
+
+#elementList {
+    overflow: hidden;
+}
+
+li {
+    padding-left: 2em;
+}
+
+/*Этот эффект применить ко всем элементам интерфейса*/
+li:hover {
+    -webkit-box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
+    box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
+    cursor: pointer;
 }
