--- a/style.css
+++ b/style.css
@@ -84,7 +84,6 @@ body {
     overflow: auto;
 }
 
-
 #outer-dropzone {
     height: 100%;
     width: 80%;
@@ -92,10 +91,6 @@ body {
     float: left;
     z-index: 2;
     border-radius: 5px;
-}
-
-#inner-dropzone {
-    height: 80px;
 }
 
 .dropzone {
@@ -109,29 +104,57 @@ body {
     z-index: 2;
 }
 
-.drop-active {
-    border-color: #aaa;
-    position: relative;
-}
+[draggable] {
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    /* Required to make elements draggable in old WebKit */
+    -khtml-user-drag: element;
+    -webkit-user-drag: element;
+  }
+  .column {
+    height: 150px;
+    width: 150px;
+    float: left;
+    border: 2px solid #666666;
+    background-color: #ccc;
+    margin-right: 5px;
+    -webkit-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 3px #000;
+    -ms-box-shadow: inset 0 0 3px #000;
+    box-shadow: inset 0 0 3px #000;
+    text-align: center;
+    cursor: move;
+  }
+  .column header {
+    color: #fff;
+    text-shadow: #000 0 1px;
+    box-shadow: 5px;
+    padding: 5px;
+    background: -moz-linear-gradient(left center, rgb(0,0,0), rgb(79,79,79), rgb(21,21,21));
+    background: -webkit-gradient(linear, left top, right top,
+                                 color-stop(0, rgb(0,0,0)),
+                                 color-stop(0.50, rgb(79,79,79)),
+                                 color-stop(1, rgb(21,21,21)));
+    background: -webkit-linear-gradient(left center, rgb(0,0,0), rgb(79,79,79), rgb(21,21,21));
+    background: -ms-linear-gradient(left center, rgb(0,0,0), rgb(79,79,79), rgb(21,21,21));
+    border-bottom: 1px solid #ddd;
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-radius-topleft: 10px;
+    -ms-border-radius-topleft: 10px;
+    border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -ms-border-top-right-radius: 10px;
+    -moz-border-radius-topright: 10px;
+    border-top-right-radius: 10px;
+  }
 
-.drop-target {
-    background-color: #29e;
-    border-color: #fff;
-    border-style: solid;
-}
-
-.drag-drop {
-    display: inline-block;
-    z-index: 1;
-    touch-action: none;
-    -webkit-transform: translate(0px, 0px);
-    transform: translate(0px, 0px);
-    transition: background-color 0.3s;
-}
-
-.drag-drop.can-drop {
-    color: #000;
-    background-color: transparent;
+.column.over {
+    border: 2px dashed #000;
 }
 
 #elementList {
@@ -146,5 +169,6 @@ li {
 li:hover {
     -webkit-box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
     box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
+    background-color: rgb(233, 168, 233);
     cursor: pointer;
 }
