--- a/style.css
+++ b/style.css
@@ -1,92 +1,130 @@
 body {
- font: 12pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
- background: darkslategray; /* Цвет фона */
- color: whitesmoke;
-}
-
-#hdr {
-    color: rgb(109, 22, 44);
+    font: 12pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
+    background: darkslategray; /* Цвет фона */
+    color: whitesmoke;
 }
 
 #header {
- align-self: center;
- align-content: center;
- font-size: 2.2em; /* Размер текста */
- text-align: center; /* Выравнивание по центру */
- padding: 5px; /* Отступы вокруг текста */
+    background-color: pink;
+    color: white;
+    text-align: center;
+    padding: 6px;
+    border-radius: 5px;
+}
+
+#navigation {
+    line-height: 40px;
+    background-color: plum;
+    height: 590px;
+    width: 15%;
+    float: left;
+    padding: 0px;
+    overflow: auto;
+    border-radius: 5px;
+}
+
+#drawing {
+    height: 590px;
+    width: auto;
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+#picturesCol {
+    height: 100%;
+    width: 19%;
+    padding: 0px;
+    float: right;
+    background-color: plum;
+    overflow: auto;
+    float: right;
+    border-radius: 5px;
 }
 
 #footer {
- background: #8fa09b; /* Цвет фона подвала */
- color: aliceblue; /* Цвет текста */
- padding: 5px; /* Отступы вокруг текста */
- clear: left; /* Отменяем действие float */
+    background-color: pink;
+    color: white;
+    text-align: center;
+    padding: 6px;
+    clear: both;
+    border-radius: 5px;
+}
+
+.saveButton {
+    padding: 5px 5px;
+    text-align: center;
+    align-self: center;
+    background-color: azure;
+    width: 40%;
+    height: 20%;
+    box-shadow: 0 0 0 rgba(0,0,0,0.1), inset 0 0 0 rgba(0,0,0,0.1);
+    font-size: 15px;
+}
+
+.button:hover{
+    background: rgb(255, 163, 88);
 }
 
 .optionList li{
-	list-style-type: none
+    list-style-type: none
 }
-
 
 .layout {
-	overflow: hidden;
-}
-
-.globCol1, .globCol2 {
-	width: 20%;
-	height: 100%;
-	float: left;
-}
-
-.globCol3 {
-	width: 60%;
-	height: 610px;
-	float: left;
-	background-color: aliceblue;
-	align-self: center;
-	table-layout: auto;
+    overflow: hidden;
 }
 
 .layout div div{
-    margin: 0 10px; /* Отступы */
-    padding: 10px; /* Поля */
+    margin: 0 0px; /* Отступы */
+    padding: 0px; /* Поля */
     height: 100%; /* Высота колонок */
-    background: darksalmon; /* Цвет фона */ 
+    background: darksalmon; /* Цвет фона */
     color: #f5e8d0; /* Цвет текста */
     overflow: auto;
-} 
-
-.drawing {
-	height: 100%;
-	width: 100%;
-	background: #ffffff;
 }
 
-.fill {
-	background-image: url('http://source.unsplash.com/random/150x150');
-	position: absolute;
-<<<<<<< HEAD
-	object-fit: cover;
-=======
->>>>>>> 7074de73b6b23423ee0a050d93f5c658a6045c39
-	height: 150px;
-	width: 150px;
-	top: 5px;
-	left: 5px;
-	cursor: pointer;
+
+#outer-dropzone {
+    height: 100%;
+    width: 80%;
+    background-color: white;
+    float: left;
+    border-radius: 5px;
 }
 
-.empty {
-	display: inline-block;
-<<<<<<< HEAD
-	position: sticky;
-=======
-	position: relative;
->>>>>>> 7074de73b6b23423ee0a050d93f5c658a6045c39
-	height: 160px;
-	width: 160px;
-	margin: 10px;
-	top: 5px;
-	border: 3px salmon solid;
-	background-color: wheat;
+#inner-dropzone {
+    height: 80px;
+}
+
+.dropzone {
+    background-color: white;
+    border: dashed 4px transparent;
+    border-radius: 5px;
+    margin: 0px auto 0px;
+    padding: 0px;
+    width: 80%;
+    transition: background-color 0.3s;
+}
+
+.drop-active {
+    border-color: #aaa;
+    position: relative;
+}
+
+.drop-target {
+    background-color: #29e;
+    border-color: #fff;
+    border-style: solid;
+}
+
+.drag-drop {
+    display: inline-block;
+    touch-action: none;
+    -webkit-transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
+    transition: background-color 0.3s;
+}
+
+.drag-drop.can-drop {
+    color: #000;
+    background-color: transparent;
 }
