--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
     height: 590px;
     width: auto;
     overflow: hidden;
-    background-color: plum;
     border-radius: 5px;
 }
 
@@ -36,10 +35,9 @@ body {
     width: 19%;
     padding: 0px;
     float: right;
-    background-color: palevioletred;
+    background-color: plum;
     overflow: auto;
     float: right;
-    z-index: 1;
     border-radius: 5px;
 }
 
@@ -84,13 +82,17 @@ body {
     overflow: auto;
 }
 
+
 #outer-dropzone {
     height: 100%;
     width: 80%;
     background-color: white;
     float: left;
-    z-index: 2;
     border-radius: 5px;
+}
+
+#inner-dropzone {
+    height: 80px;
 }
 
 .dropzone {
@@ -101,36 +103,37 @@ body {
     padding: 0px;
     width: 80%;
     transition: background-color 0.3s;
-    z-index: 2;
 }
 
-[draggable] {
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
-    /* Required to make elements draggable in old WebKit */
-    -khtml-user-drag: element;
-    -webkit-user-drag: element;
-  }
-
-.element {
-    cursor: move;
-  }
-
-.drawing.over {
-    border: 2px dashed #000;
+.drop-active {
+    border-color: #aaa;
+    position: relative;
 }
 
-#elementList {
-    overflow: hidden;
+.drop-target {
+    background-color: #29e;
+    border-color: #fff;
+    border-style: solid;
+}
+
+.drag-drop {
+    display: inline-block;
+    touch-action: none;
+    -webkit-transform: translate(0px, 0px);
+    transform: translate(0px, 0px);
+    transition: background-color 0.3s;
+}
+
+.drag-drop.can-drop {
+    color: #000;
+    background-color: transparent;
 }
 
 li {
     padding-left: 2em;
+    padding-right: 0em;
 }
 
-/*Этот эффект применить ко всем элементам интерфейса*/
 li:hover {
     -webkit-box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
     box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
