--- a/navigation_style.css
+++ b/navigation_style.css
@@ -16,7 +16,7 @@
 }
 
 .btn{
-    border: 1px solid #3498db;
+    border: 1px solid pink;
     background: none;
     padding: 10px 20px;
     font-size: 20px;
@@ -28,7 +28,7 @@
     overflow: hidden;
   }
   .btn1,.btn2{
-    color: #3498db;
+    color: pink;
   }
   .btn3,.btn4{
     color: #fff;
@@ -37,7 +37,7 @@
     color: #fff;
   }
   .btn3:hover,.btn4:hover{
-    color: #3498db;
+    color: pink;
   }
   .btn::before{
     content: "";
@@ -45,7 +45,7 @@
     left: 0;
     width: 100%;
     height: 0%;
-    background: #3498db;
+    background: pink;
     z-index: -1;
     transition: 0.8s;
   }
