--- a/footer_style.css
+++ b/footer_style.css
@@ -2,18 +2,17 @@
     line-height: 40px;
     background: transparent;
     /*background-color: rgb(138, 102, 138);*/
-    height: 590px;
-    width: 15%;
+    height: 30%;
+    width: 100%;
     float: left;
     padding: 0px;
     overflow: auto;
     border-radius: 5px;
-    clear: both;
-    border-radius: 5px;
+    /*clear: both;*/
 }
 
 .container {
-    text-align: center;
+    text-align: left;
     margin-top: 5px;
 }
 
