--- a/menu_style.css
+++ b/menu_style.css
@@ -1,3 +1,14 @@
+#picturesCol {
+    height: 150%;
+    width: 19%;
+    padding: 0px;
+    float: right;
+    background-color: rgb(212, 154, 212);
+    /*background: transparent;*/
+    overflow: auto;
+    border-radius: 5px;
+}
+
 .menu {
     list-style-type: none;
     box-sizing: border-box;
@@ -10,18 +21,18 @@
     padding-top: 9px;
     margin: 5px 0;
     transition: .4s;
-    width: 218px;
+    width: 94%;
 }
 
 .menu li div {
     text-align: left;
-    width: 218px;
+    width: 94%;
 }
 
 .menu li:hover {
     -webkit-box-shadow: 0px 0px 5px rgba(255,255,255,0.9);
     box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
-    background-color: rgb(212, 154, 212);
+    background-color: rgb(233, 170, 233);
     cursor: pointer;
     transform: scale(1.03);
 }
