--- a/footer_style.css
+++ b/footer_style.css
@@ -20,8 +20,7 @@
     border: 1px solid pink;
     background: none;
     padding: 10px 20px;
-    font-size: 20px;
-    font-family: "montserrat";
+    font: 20px Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
     cursor: pointer;
     margin: 10px;
     transition: 0.8s;
