--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font: 10pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
+    font: 10pt Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif; /* Шрифт на веб-странице */
     background: rgb(138, 102, 138); /* Цвет фона */
     color: whitesmoke;
     font-family: sans-serif;
