--- a/modal_style.css
+++ b/modal_style.css
@@ -1,17 +1,25 @@
 .button {
-    background: coral;
-    padding: 1em 2em;
+    border: none;
+    background: none;
+    cursor: pointer;
+    margin: 10px;
+    transition: 0.8s;
+    position: relative;
+    overflow: hidden;
     color: #fff;
-    border: 0;
 }
 
 .button:hover {
-    background: #333;
+    -webkit-box-shadow: 0px 0px 5px rgba(255,255,255,0.9);
+    box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
+    background-color: rgb(233, 170, 233);
+    cursor: pointer;
+    transform: scale(1.03);
 }
 
 .modal {
     color: black;
-    display:none;
+    display: none;
     position: fixed;
     z-index: 2;
     left: 0;
@@ -26,13 +34,13 @@
 
 .modal-content {
     background-color: #f4f4f4;
-    margin: 20% auto;
-    width: 70%;
+    margin: 10% auto;
+    width: 50%;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0, 0.17); 
 }
 
 .modal-header{
-    background: coral;
+    background: rgb(212, 154, 212);
     padding: 15px;
     color: #fff;
 }
@@ -46,7 +54,7 @@
 }
 
 .modal-footer {
-    background: coral;
+    background: rgb(212, 154, 212);
     padding: 10px;
     color: #fff;
     text-align: center;
@@ -62,6 +70,10 @@
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+#deleteBtn, #editBtn {
+    color: #000;
 }
 
 @keyframes modalopen {
