Fixed code according to Code Conventions

--- a/context_menu.css
+++ b/context_menu.css
@@ -1,3 +1,4 @@
+/* Context menu */
 .context-menu {
     display: none;
     background-color: lightgoldenrodyellow;
@@ -12,16 +13,19 @@
     z-index: 10;
 }
 
+/* Display context menu */
 .context-menu--active {
     display: block;
 }
 
+/* Items of context menu */
 .context-menu__items {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
+/* ?????????????????????????????????????????????????????????????????????????????????? */
 .context-menu__link {
     display: block;
     color: darkorchid;
