--- a/footer_style.css
+++ b/footer_style.css
@@ -1,4 +1,4 @@
-/*Стиль нижнего прямоугольника*/
+/* Footer style */
 #footer {
     background-color: pink;
     height: 10%;
@@ -10,13 +10,14 @@
     clear: both;
 }
 
+/* Container for buttons */
 .container {
     margin-top: 5px;
     text-align: center;
     width: 100%;
 }
 
-/*Стиль кноки*/
+/* Button style */
 .btn{
     border: 1px solid pink;
     background: none;
@@ -30,7 +31,8 @@
     overflow: hidden;
   }
 
-    .btn-ref,
+/* Buttons 4 types (depends on animation) */
+  .btn-ref,
   .btn1,
   .btn2,
   .btn3,
@@ -41,18 +43,21 @@
         text-decoration: none;
   }
 
+/* Buttons 1, 2, 5 on hover */
   .btn1:hover,
   .btn5:hover,
   .btn2:hover{
     color: #fff;
   }
 
+/* Buttons 3, 4 on hover */
   .btn3:hover,
   .btn4:hover,
   .btn-ref:hover {
     color: #fff;
   }
 
+/* Button before */
   .btn::before{
     content: "";
     position: absolute;
@@ -64,6 +69,7 @@
     transition: 0.8s;
   }
 
+/* Buttons 1, 3, 5 before */
   .btn1::before,
   .btn5::before,
   .btn3::before{
@@ -71,6 +77,7 @@
     border-radius: 0 0 50% 50%;
   }
 
+/* Buttons 2, 4, ref before */
   .btn2::before,
   .btn4::before,
   .btn-ref::before {
@@ -78,24 +85,28 @@
     border-radius: 50% 50% 0 0;
   }
 
+/* Buttons 3, 4, ref before */
   .btn3::before,
   .btn4::before,
   .btn-ref {
     height: 180%;
   }
 
+/* Buttons 1, 2, 5 before */
   .btn1:hover::before,
   .btn5:hover::before,
   .btn2:hover::before {
     height: 180%;
   }
 
+/* Buttons 3, 4, on hover before */
   .btn3:hover::before,
   .btn4:hover::before
   .btn-ref:hover::before{
     height: 0%;
   }
   
+/* Button to exit operator mode */
   #op_button {
     float: right;
   }
