--- a/modal_add.css
+++ b/modal_add.css
@@ -1,17 +1,16 @@
 .hint {
-    font-size: 14pt;
-    height: 15%;
-    margin-top: 5%;
+    font-size: 20px;
+    /*height: 15%;*/
+    margin-top: 2%;
     margin-left: 15%;
     margin-right: 15%;
     width: 70%;
 }
 
 .input-str {
-    height: 15%;
     margin-left: 20%;
     margin-right: 20%;
-    margin-top: 5%;
+    margin-top: 2%;
     width: 60%;
 }
 
