--- a/context_menu.css
+++ b/context_menu.css
@@ -25,7 +25,7 @@
     padding: 0;
 }
 
-/* ?????????????????????????????????????????????????????????????????????????????????? */
+/* Elements of context menu */
 .context-menu__link {
     display: block;
     color: darkorchid;
@@ -33,6 +33,7 @@
     text-decoration: none;
 }
 
+/* Hoovering elements of context menu */
 .context-menu__link:hover {
     color: #fff;
     background-color: bisque;
