--- a/style.css
+++ b/style.css
@@ -84,10 +84,12 @@ body {
     transform: translateX(0%);
 }
 
+/*Button "Готово" on graphical editor*/
 #qbutton {
     color: white;
 }
 
+/*Button "Готово" on graphical editor hoover*/
 #qbutton:hover {
     -webkit-box-shadow: 0px 0px 5px rgba(255,255,255,0.9);
     box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
