--- a/footer_style.css
+++ b/footer_style.css
@@ -5,7 +5,7 @@
     width: 100%;
     float: left;
     padding: 0px;
-    overflow: auto;
+    overflow: hidden;
     border-radius: 5px;
     clear: both;
     color: white;
