--- a/style.css
+++ b/style.css
@@ -19,14 +19,15 @@ body {
     background-color: pink;
     border-radius: 5px;
     color: white;
-    height: 10%;
+    display: flex;
+    height: 15%;
     padding: 4px;
     text-align: center;
 }
 
 /* Drawing window */
 #drawing {
-    height: 80%;
+    height: 75%;
     width: 100%;
     overflow: hidden;
     border-radius: 5px;
@@ -102,4 +103,16 @@ body {
 .algorithm-list-vis {
     display: block;
     list-style-type: none;
+}
+
+.plus-scene {
+    border: thick dashed white;
+    border-radius: 5px;
+    cursor: pointer;
+    display: none;
+    font: 14pt Arial, white, sans-serif;
+    line-height: 5em;
+    height: 5em;
+    text-align: center;
+    width: 10%;
 }
