Function for recieving and showing images from database added

--- a/footer_style.css
+++ b/footer_style.css
@@ -112,7 +112,7 @@
     float: right;
   }
 
-  /*.btn-ref {
-      color: orchid;
-      text-decoration: none;
-  }*/
+  .small-scene {
+      height: 100%;
+      width: 100%;
+  }
