--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@ body {
     transform: translateX(0%);
 }
 
+.primitives-disabled {
+    transform: translateX(-100%);
+}
+
 #qbutton {
     color: white;
 }
