--- a/modal_style.css
+++ b/modal_style.css
@@ -39,7 +39,7 @@
 .modal-content {
     background-color: #f4f4f4;
     margin: 10% auto;
-    width: 50%;
+    width: 56%;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0, 0.17); 
 }
 
@@ -58,6 +58,7 @@
 /* Modal body content */
 .modal-body {
     padding: 20px;
+    text-align: center;
 }
 
 #show-scene {
