--- a/footer_style.css
+++ b/footer_style.css
@@ -1,5 +1,12 @@
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: normal;
+  src: url('https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap') format('truetype');
+}
 /* Footer style */
 #footer {
+  font-family: 'Source Sans Pro', sans-serif;
   background-color: pink;
   height: 8%;
   width: 100%;
@@ -23,7 +30,6 @@
   border: 1px solid pink;
   background: none;
   cursor: pointer;
-  font-family: "montserrat";
   font-size: 20px;
   margin: 10px;
   transition: 0.8s;
