--- a/menu_style.css
+++ b/menu_style.css
@@ -7,6 +7,7 @@
     background-color: plum;
     overflow: auto;
     border-radius: 5px;
+    font-family: 10pt 'Roboto', sans-serif;
 }
 
 /* Structures menu */
