--- a/style.css
+++ b/style.css
@@ -8,10 +8,11 @@
 /* Body */
 body {
     font-family: 'Source Sans Pro', sans-serif;
-    background: rgb(138, 102, 138);
+    background: white;
     color: whitesmoke;
     padding: 0;
     margin: 0;
+    overflow: hidden; /* Hide scrollbars */
 }
 
 /* Operator mode */
@@ -22,7 +23,8 @@ body {
 
 /* Header */
 #header {
-    background-color: pink;
+    background: rgb(164,163,163);
+    background: linear-gradient(180deg, rgba(164,163,163,1) 0%, rgba(255,255,255,1) 100%);
     color: white;
     display: flex;
     height: 15%;
@@ -74,7 +76,7 @@ body {
 
 /* Primitives edit menu */
 .primitives {
-    background-color: plum;
+    background-color: lightskyblue;
     float: left;
     height: 100%;
     left: 0;
