--- a/context_menu.css
+++ b/context_menu.css
@@ -11,7 +11,6 @@
     position: absolute;
     width: 200px;
     z-index: 10;
-    border-radius: 5px;
     animation-name: context_menu_open;
     animation-duration: 0.6s;
 }
@@ -42,7 +41,7 @@
 /* Context menu item on hover */
 .context-menu__link:hover {
     color: white;
-    background-color: pink;
+    background-color: lavender;
     -webkit-box-shadow: 0px 0px 5px rgba(255,255,255,0.9);
     box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
     cursor: pointer;
