--- a/menu_style.css
+++ b/menu_style.css
@@ -1,12 +1,16 @@
 /* Structures menu column */
 #structures-col {
     height: 100%;
-    width: 20%;
+    width: 18%;
     padding: 0px;
     float: right;
-    background-color: plum;
+    background-color: white;
     overflow: auto;
     font-family: 10pt 'Roboto', sans-serif;
+    color: rgb(54, 54, 54);
+    border: 4px black;
+    -webkit-box-shadow: 0px 0px 5px rgba(255,255,255,0.9);
+    box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
 }
 
 /* Structures menu */
@@ -42,7 +46,7 @@
 .menu li:hover {
     -webkit-box-shadow: 0px 0px 5px rgba(255,255,255,0.9);
     box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
-    background-color: rgb(233, 170, 233);
+    background-color: rgb(245, 245, 255);
     cursor: pointer;
     transform: scale(1.03);
 }
