--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /* Body */
 body {
     font-family: 'Source Sans Pro', sans-serif;
-    background: rgb(228, 3, 3);
+    background: white;
     color: whitesmoke;
     padding: 0;
     margin: 0;
@@ -132,7 +132,7 @@ body {
 
 .one-scene {
     background-color: white;
-    border: thick solid orchid;
+    border: thick solid rgb(245, 245, 255);
     border-radius: 5px;
     cursor: pointer;
     height: 90%;
@@ -142,6 +142,10 @@ body {
 .one-container {
     text-align: center;
     padding: 3%;
-    /*background-color: rgb(205, 231, 86);*/
     background-color: lavender;
+}
+
+/* Add a new container button */
+#add_a_container {
+    background-color: rgb(184, 184, 212);;
 }
