--- a/footer_style.css
+++ b/footer_style.css
@@ -26,7 +26,8 @@
 
 /* Button style */
 .btn{
-  border: 1px solid pink;
+  border: 1px solid rgb(130, 130, 165);
+  background-color: white;
   background: none;
   cursor: pointer;
   font-size: 20px;
@@ -36,6 +37,8 @@
   position: relative;
   overflow: hidden;
   outline: none;
+  z-index: 4;
+  color: rgb(54, 54, 54);
 }
 
 /* Buttons 4 types (depends on animation) */
@@ -46,23 +49,23 @@
 .btn4,
 .btn5 {
       outline:none;
-      color: orchid;
       transition: color 0.2s linear;
       text-decoration: none;
+      color: rgb(54, 54, 54);
 }
 
 /* Buttons 1, 2, 5 on hover */
 .btn1:hover,
 .btn5:hover,
 .btn2:hover{
-  color: #fff;
+  color: rgb(75, 75, 75);
 }
 
 /* Buttons 3, 4 on hover */
 .btn3:hover,
 .btn4:hover,
 .btn-ref:hover {
-  color: #fff;
+  color: rgb(75, 75, 75);
 }
 
 /* Button before */
@@ -72,7 +75,7 @@
   left: 0;
   width: 100%;
   height: 0%;
-  background: pink;
+  background: rgb(245, 245, 255);
   z-index: -1;
   transition: 0.8s;
 }
@@ -91,6 +94,7 @@
 .btn-ref::before {
   bottom: 0;
   border-radius: 50% 50% 0 0;
+  color: rgb(54, 54, 54);
 }
 
 /* Buttons 3, 4, ref before */
