--- a/menu_style.css
+++ b/menu_style.css
@@ -7,7 +7,7 @@
     background-color: white;
     overflow: auto;
     font-family: 10pt 'Roboto', sans-serif;
-    color: rgb(54, 54, 54);
+    color: #333;
     border: 4px black;
     -webkit-box-shadow: 0px 0px 5px rgba(255,255,255,0.9);
     box-shadow: 0px 0px 7px rgba(255,255,255,0.9);
