--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
     /* Add horizontal scroll */
     overflow-x: auto;
     white-space: nowrap;
+    overflow-y: hidden;
 }
 
 #student-mode {
@@ -142,6 +143,10 @@ body {
     cursor: pointer;
     height: 90%;
     width: 10%;
+    max-width: 136.71px;
+    min-width: 136.71px;
+    display: inline-block;
+    overflow-y: hidden;
 }
 
 
